# datasaurust

./: .gitignore  Cargo.toml  README.md  cat_lines.pkl  same_stats.py
.github/workflows/: ci.yml
data/: cat2_lines.pkl  cat_lines.pkl  dog_lines.pkl  rabbit_lines.pkl
data/seed_datasets/: gaussian.csv  random_cloud.csv
rust/: Cargo.toml
rust/src/: main.rs
scripts/: check_csv.py  concat_videos.py  config.yml  create_all.sh  create_video.py  draw_svg.py  same_stats.py
src/: lib.rs  main.rs  optim.rs  shapes.rs  types.rs
