[package]
name = "datasaurust"
version = "0.1.0"
edition = "2021"
authors = ["Antonin <antonin.raffin@ensta.org>"]
description = "Blazingly fast implementation of the Datasaurus paper."
homepage = "https://github.com/araffin/datasaurust"
repository = "https://github.com/araffin/datasaurust"
documentation = "https://docs.rs/datasaurust"
license = "MIT"
readme = "README.md"
categories = ["science", "visualization"]
keywords = ["data", "science", "plot", "visualization", "statistics", "datasaurus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
gnuplot = "0.0.37"
kdam = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
